[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MVSEP-MDX23"
version = "1.0.0"
description = "Music separation model. Forked from https://github.com/jarredou/MVSEP-MDX23-Colab_v2"
dependencies = [
    "numpy",
    "soundfile",
    "scipy",
    "tqdm",
    "librosa",
    "demucs",
    "onnxruntime-gpu",
    "torch>=1.13.0",
    "pyyaml",
    "ml_collections",
    "pytorch_lightning",
    "samplerate==0.1.0",
    "segmentation_models_pytorch==0.3.3"
]
