[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MVSEP-MDX23"
version = "2.0.5"
description = "Music separation model. Forked from https://github.com/jarredou/MVSEP-MDX23-Colab_v2"
dependencies = [
    "numpy",
    "soundfile",
    "scipy",
    "tqdm",
    "librosa",
    "demucs",
    "onnxruntime-gpu",
    "torch",
    "pyyaml",
    "ml_collections",
    "samplerate==0.1.0",
    "segmentation_models_pytorch==0.3.3",
    "beartype==0.14.1",
    "rotary_embedding_torch==0.3.5"
]

[tool.setuptools]
packages = {find = {where = ["src"]}}
include_package_data = true
package_data = {mvsep_mdx23 = ["models/*.yaml"]}
